# halem

./: .coverage  .coveragerc  .gitignore  01_Road_map_generator(05nm).ipynb  01_Road_map_generator(100m).ipynb  01_Road_map_generator(3D05nm).ipynb  01_Road_map_generator.ipynb  02_Optimize_from_roadmap.ipynb  02_optimize_from_roadmap_GUI.py  02_optimize_from_roadmap_GUI_2D_05nm.py  02_optimize_from_roadmap_GUI_3D_05nm.py  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  Flow_class_DCSM-FM-100m.ipynb  Function_for_digital_twin.ipynb  LICENSE.txt  README.md  Untitled-1.py  core (Digitial-twin).py  deploy.md  docker-compose.yml  new2.nc  new3.nc  onelinefunction.ipynb  pytest-full.ini  setup.cfg  setup.py
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh
.ipynb_checkpoints/: 01_Road_map_generator(05nm)-checkpoint.ipynb  01_Road_map_generator(100m)-checkpoint.ipynb  01_Road_map_generator(NOOS_data)-checkpoint.ipynb  01_Road_map_generator-checkpoint.ipynb  02_Optimize_from_roadmap-checkpoint.ipynb  Bathymetry-checkpoint.ipynb  Flow_class_3D_DCSM-FM-05.nm-checkpoint.ipynb  Flow_class_DCSM-FM-100m-checkpoint.ipynb  Flow_class_DCSM_zuno.nm-checkpoint.ipynb  onelinefunction-checkpoint.ipynb
Notebooks/: 01_trivial_validation cases-Copy1.ipynb  01_trivial_validation cases.ipynb  01a_Road_map_generator(FM 05 nm)-Copy1.ipynb  01a_Road_map_generator(FM 05 nm).ipynb  01a_Road_map_generator(NOOS_data).ipynb  01b_Road_map_generator_with_indeices.ipynb  01d_Road_map_generator(3D05nm).ipynb  02_Explanation example.ipynb  02_Optimize_from_roadmap.ipynb  02_optimize_from_roadmap_GUI.py  02a_Optimize_from_roadmap.ipynb  02b_Route_optimizer_always_valid.ipynb  03_optimize_from_roadmap_GUI.py  04_optimize_from_real_flow_data.ipynb  New_FIFO_function.ipynb  Onelinefunction.ipynb  Road_map_generator_with_indeices.ipynb  Test_3D_graphs.ipynb  Untitled.ipynb  new FIFO function.ipynb  nodes on land.ipynb  onelinefunction.ipynb  test Curl.ipynb
Notebooks TomTom/: 01_Road_map_generator(05nm).ipynb  01_Road_map_generator(100m).ipynb  01_Road_map_generator(3D05nm).ipynb  01_Road_map_generator(NOOS_data).ipynb  02_Optimize_from_roadmap.ipynb  02_optimize_from_roadmap_GUI_3D_05nm.py  03_testcase.ipynb  Bathymetry.ipynb  Flow_class_3D_DCSM-FM-05.nm.ipynb  Flow_class_DCSM-FM-100m.ipynb  Flow_class_DCSM_zuno.nm.ipynb  Untitled.ipynb  hello.txt  onelinefunction.ipynb
RODFF/: Calc_path.py  Flow_class.py  Functions.py  Mesh_maker.py  __init__.py
RODFF.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
TomTom/: Functions.py  Mesh_maker.py  __init__.py
coverage/: d_5996606ddda1ba40___init___py.html  d_5996606ddda1ba40_base_functions_py.html  d_5996606ddda1ba40_calc_path_py.html  d_5996606ddda1ba40_functions_py.html  d_5996606ddda1ba40_mesh_maker_py.html  d_5996606ddda1ba40_node_reduction_py.html  d_5996606ddda1ba40_path_finder_py.html  d_5996606ddda1ba40_roadmap_py.html  index.html  status.json
docs/: authors.rst  conf.py  contributing.rst  examples.rst  halem.rst  history.rst  index.rst  installation.rst  modules.rst
halem/: Base_functions.py  Calc_path.py  Flow_class.py  Functions.py  Functions_old.py  Mesh_maker.py  __init__.py  particle_tracking.py  simulation.py
halem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
halem_pkg_PietervanHalem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
htmlcov/: _Users_D4L_AppData_Roaming_Python_Python36_site-packages_colorama_ansitowin32_py.html  _Users_D4L_AppData_Roaming_Python_Python36_site-packages_colorama_win32_py.html  _Users_D4L_AppData_Roaming_Python_Python36_site-packages_colorama_winterm_py.html  _Users_D4L_AppData_Roaming_Python_Python36_site-packages_six_py.html  _eggs_atomicwrites-1_3_0-py3_6_egg_atomicwrites___init___py.html  _eggs_pluggy-0_11_0-py3_6_egg_pluggy__tracing_py.html  _eggs_pluggy-0_11_0-py3_6_egg_pluggy_callers_py.html  _eggs_pluggy-0_11_0-py3_6_egg_pluggy_hooks_py.html  _eggs_pluggy-0_11_0-py3_6_egg_pluggy_manager_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest__argcomplete_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest__code_code_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest__code_source_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest__io_saferepr_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_assertion___init___py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_assertion_rewrite_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_cacheprovider_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_capture_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_compat_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_config___init___py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_config_argparsing_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_debugging_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_doctest_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_fixtures_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_helpconfig_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_junitxml_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_logging_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_main_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_mark___init___py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_mark_evaluate_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_mark_structures_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_monkeypatch_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_nodes_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_nose_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_pastebin_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_pathlib_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_python_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_reports_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_resultlog_py.html  _eggs_pytest-4_5_0-py3_6_egg__pytest_runner_py.html  (+22 more)
notebooks/: Explanation example.ipynb  (+3 more)
(+66 files in other folders)
