[metadata]
name = Route Optimization in Dynamic Floef Fields
description = The Route optimization for dynamic flow field searches the optimal route for a given flow field.
author = Pieter van Halem
author-email = pieter.vanhalem@vanoord.com
license = mit
url = https://pyscaffold.org/
long-description = file: README.md
platforms = any
classifiers =

    Development Status :: 4 - Beta

    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = pyscaffold>=3.1a0,<3.2a0

install_requires = 
    numpy
    simpy
    networkx
    shapely
    scipy
    etCDF4
    click
    matplotlib
    IPython
    geopy
    pint
    pyproj
    plotly
    simplekml
    matplotlib
    click
    nose
    flask
    flask_cors
    simplekml

[options.packages.find]
where = halem

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-timeout

[options.entry_points]


[tool:pytest]
addopts = 
    --cov --cov-report term-missing --cov-report html
    --verbose
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests

[aliases]
docs = build_sphinx
test=pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
